import from obs

--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@ endif
 
 include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
 libpkgs_addsubst_allLibraries = kdepimlibs5-dev kdepimlibs-dbg
-libpkgs_gen_strict_local_shlibs = $(libpkgs_all_packages)
+#libpkgs_gen_strict_local_shlibs = $(libpkgs_all_packages)
 include /usr/share/pkg-kde-tools/qt-kde-team/2/library-packages.mk
 
 override_dh_auto_configure:
@@ -22,3 +22,6 @@ override_dh_shlibdeps:
 
 override_dh_strip:
 	$(overridden_command) --dbg-package=kdepimlibs-dbg
+
+override_dh_install:
+	$(overridden_command) --list-missing
