--- a/debian/control
+++ b/debian/control
@@ -10,11 +10,10 @@ Uploaders: Sune Vuorela <sune@debian.org>,
            Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>,
            Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake,
-               debhelper (>= 9),
+               debhelper (>= 8),
                dpkg-dev (>= 1.15.5),
-               kde-sc-dev-latest (>= 4:4.12),
-               kdelibs5-dev (>= 4:4.12),
-               libakonadi-dev (>= 1.12.1),
+               kdelibs5-dev (>= 4:4.13),
+               libakonadi-dev (>= 1.12.42), libakonadi-dev (<< 1.13),
                libboost-dev (>= 1.34),
                libboost-graph-dev,
                libgpgme11-dev,
@@ -42,14 +41,10 @@ Section: libdevel
 Architecture: any
 Depends: ${allLibraries},
          ${misc:Depends},
-         ${sameVersionDep:kdelibs5-dev:libakonadi-kde4},
+         kdelibs5-dev (>= 4:4.13),
          ${shlibs:Depends}
-Replaces: kdepim-runtime (<< 4:4.13),
-          kdepimlibs-data (<< 4:4.1.80),
-          libkleopatra1-dev
-Breaks: kdepim-runtime (<< 4:4.13),
-        kdepimlibs-data (<< 4:4.1.80),
-        libkleopatra1-dev
+Replaces: libkleopatra1-dev
+Breaks: libkleopatra1-dev
 Description: development files for the KDE Development Platform PIM libraries
  This package contains development files for building software that uses
  the KDE Development Platform Personal Information Management libraries.
@@ -59,8 +54,8 @@ Description: development files for the KDE Development Platform PIM libraries
 Package: kdepimlibs-kio-plugins
 Architecture: any
 Depends: libsasl2-modules, ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Replaces: kdepimlibs-data
+Breaks: kdepimlibs-data
 Description: kio slaves used by KDE PIM applications
  This package contains the imap4, ldap, mbox, nntp, pop3, sieve and smtp kio
  slaves.
@@ -70,8 +65,6 @@ Description: kio slaves used by KDE PIM applications
 Package: libakonadi-contact4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepim-runtime (<< 4:4.4.0)
-Breaks: kdepim-runtime (<< 4:4.4.0)
 Description: Akonadi contacts access library
  This library provides contacts manipulation helpers using the
  Akonadi PIM data server.
@@ -81,8 +74,6 @@ Description: Akonadi contacts access library
 Package: libakonadi-kabc4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: akonadi-kde (<< 4:4.1.80), kdepimlibs5 (<< 4:4.4.0)
-Breaks: akonadi-kde (<< 4:4.1.80), kdepimlibs5 (<< 4:4.4.0)
 Description: Akonadi address book access library
  This library provides address book manipulation helpers using the
  Akonadi PIM data server.
@@ -92,8 +83,6 @@ Description: Akonadi address book access library
 Package: libakonadi-kcal4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: akonadi-kde (<< 4:4.1.80), kdepim-runtime (<< 4:4.4.0)
-Breaks: akonadi-kde (<< 4:4.1.80), kdepim-runtime (<< 4:4.4.0)
 Description: Akonadi calendar access library
  This library provides calendar manipulation helpers using the
  Akonadi PIM data server.
@@ -103,8 +92,8 @@ Description: Akonadi calendar access library
 Package: libakonadi-kde4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Replaces: kdepimlibs-data
+Breaks: kdepimlibs-data
 Description: library for using the Akonadi PIM data server
  This is the client access library for using the Akonadi PIM data server.
  .
@@ -113,8 +102,8 @@ Description: library for using the Akonadi PIM data server
 Package: libakonadi-kmime4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Replaces: kdepimlibs-data
+Breaks: kdepimlibs-data
 Description: Akonadi MIME handling library
  This library provides MIME handling helpers using the
  Akonadi PIM data server.
@@ -141,8 +130,6 @@ Description: Akonadi notes access library
 Package: libakonadi-xml4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepim-runtime (<< 4:4.12.0)
-Breaks: kdepim-runtime (<< 4:4.12.0)
 Description: Akonadi XML helper library
  This library provides XML helpers using the Akonadi PIM data server.
  .
@@ -151,8 +138,6 @@ Description: Akonadi XML helper library
 Package: libgpgme++2
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: c++ wrapper library for gpgme
  GpgME++ is a C++ wrapper (or C++ bindings) for the GnuPG project's gpgme
  (GnuPG Made Easy) library.
@@ -162,8 +147,8 @@ Description: c++ wrapper library for gpgme
 Package: libkabc4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Replaces: kdepimlibs-data
+Breaks: kdepimlibs-data
 Description: library for handling address book data
  This library provides an API for address book data. It includes features
  such as:
@@ -185,8 +170,6 @@ Description: library for handling address book data
 Package: libkblog4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: client-side support library for web application remote blogging APIs
  KBlog is a library for calling functions on Blogger 1.0, MetaWeblog,
  MovableType and GData compatible blogs. It calls the APIs using KXmlRpcClient
@@ -208,8 +191,8 @@ Description: library for handling kalarm calendar data
 Package: libkcal4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Replaces: kdepimlibs-data
+Breaks: kdepimlibs-data
 Description: library for handling calendar data
  This library provides access to and handling of calendar data. It supports
  the standard formats iCalendar and vCalendar and the group scheduling
@@ -242,8 +225,8 @@ Description: library with utility functions for the handling of calendar data
 Package: libkholidays4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Replaces: kdepimlibs-data
+Breaks: kdepimlibs-data
 Description: holidays calculation library
  This library provides a C++ API that determines holiday and other special
  events for a geographical region.
@@ -253,8 +236,6 @@ Description: holidays calculation library
 Package: libkimap4
 Architecture: any
 Depends: libsasl2-modules, ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for handling IMAP data
  This library provides an API for handling data received from IMAP services.
  IMAP (Internet Message Access Protocol) is one of the two most prevalent
@@ -265,8 +246,6 @@ Description: library for handling IMAP data
 Package: libkldap4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for accessing LDAP
  This is a library for accessing LDAP with a convenient Qt style C++ API.
  LDAP (Lightweight Directory Access Protocol) is an application protocol
@@ -295,8 +274,6 @@ Description: library providing calendar helpers for Akonadi items
 Package: libkmime4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for handling MIME data
  This library provides an API for handling MIME data. MIME (Multipurpose
  Internet Mail Extensions) is an Internet Standard that extends the format
@@ -306,11 +283,11 @@ Description: library for handling MIME data
  .
  This package is part of the KDE Development Platform PIM libraries module.
 
-Package: libkontactinterface4
+Package: libkontactinterface4a
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kontact (<< 4:4.1.80), libkontactinterfaces4
-Breaks: kontact (<< 4:4.1.80), libkontactinterfaces4
+Replaces: libkontactinterface4
+Breaks: libkontactinterface4
 Description: Kontact interface library
  This library provides the glue necessary for application "Parts" to be
  embedded as a Kontact component (or plugin).
@@ -320,12 +297,7 @@ Description: Kontact interface library
 Package: libkpimidentities4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepim-runtime (<< 4:4.5),
-        kdepimlibs5 (<< 4:4.4.0),
-        klinkstatus (<< 4:4.5),
-        libkalarmcal2 (<< 4:4.9),
-        libkdepim4 (<< 4:4.5)
+Breaks: klinkstatus (<< 4:4.5)
 Description: library for managing user identities
  This library provides an API for managing user identities.
  .
@@ -334,8 +306,6 @@ Description: library for managing user identities
 Package: libkpimtextedit4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library that provides a textedit with PIM-specific features
  KPIMTextedit provides a textedit with PIM-specific features. It also provides
  so-called rich text builders which can convert the formatted text in the text
@@ -346,8 +316,6 @@ Description: library that provides a textedit with PIM-specific features
 Package: libkpimutils4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for dealing with email addresses
  This library contains utility functions for dealing with email addresses.
  This includes parsing, splitting and munging email addresses represented
@@ -359,8 +327,8 @@ Description: library for dealing with email addresses
 Package: libkresources4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Replaces: kdepimlibs-data
+Breaks: kdepimlibs-data
 Description: KDE Resource framework library
  This library provides a framework for managing resources of different types,
  organized in families. The Resource framework is for example used for
@@ -371,8 +339,6 @@ Description: KDE Resource framework library
 Package: libktnef4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for handling TNEF data
  Ktnef is a library for handling data in the TNEF format (Transport Neutral
  Encapsulation Format, a proprietary format of e-mail attachment used by
@@ -385,8 +351,6 @@ Description: library for handling TNEF data
 Package: libkxmlrpcclient4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: simple XML-RPC client library
  This library contains simple XML-RPC client support. It is used mainly by the
  egroupware module of kdepim, but is a complete client and is quite easy to use.
@@ -396,8 +360,8 @@ Description: simple XML-RPC client library
 Package: libmailtransport4
 Architecture: any
 Depends: ${misc:Depends}, ${perl:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Replaces: kdepimlibs-data
+Breaks: kdepimlibs-data
 Description: mail transport service library
  Mailtransport is a library that provides the following functionality:
  .
@@ -413,8 +377,6 @@ Description: mail transport service library
 Package: libmicroblog4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for using the Microblog Akonadi Resource
  Microblog is a library that provides some helper functions for using
  the Microblog Akonadi Resource.
@@ -424,8 +386,6 @@ Description: library for using the Microblog Akonadi Resource
 Package: libqgpgme1
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for GpgME++ integration with Qt
  QGpgME is a library that provides GpgME++ integration with QEventLoop
  and some Qt datatypes (e.g. QByteArray).
@@ -435,8 +395,6 @@ Description: library for GpgME++ integration with Qt
 Package: libsyndication4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs5 (<< 4:4.4.0)
-Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: parser library for RSS and Atom feeds
  Syndication is a parser library for RSS and Atom feeds. It offers a unified,
  format-agnostic view on the parsed feed, so that the using application does
