--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,8 @@ Build-Depends: cmake,
                debhelper (>= 8),
                dpkg-dev (>= 1.15.5),
                kdelibs5-dev (>= 4:4.13),
-               libakonadi-dev (>= 1.12.42), libakonadi-dev (<< 1.13),
+               libakonadi-dev (<< 1.13),
+               libakonadi-dev (>= 1.12.42),
                libboost-dev (>= 1.34),
                libboost-graph-dev,
                libgpgme11-dev,
@@ -41,10 +42,14 @@ Section: libdevel
 Architecture: any
 Depends: ${allLibraries},
          ${misc:Depends},
-         kdelibs5-dev (>= 4:4.13),
+         ${sameVersionDep:kdelibs5-dev:libakonadi-kde4},
          ${shlibs:Depends}
-Replaces: libkleopatra1-dev
-Breaks: libkleopatra1-dev
+Replaces: kdepim-runtime (<< 4:4.13),
+          kdepimlibs-data (<< 4:4.1.80),
+          libkleopatra1-dev
+Breaks: kdepim-runtime (<< 4:4.13),
+        kdepimlibs-data (<< 4:4.1.80),
+        libkleopatra1-dev
 Description: development files for the KDE Development Platform PIM libraries
  This package contains development files for building software that uses
  the KDE Development Platform Personal Information Management libraries.
@@ -54,8 +59,8 @@ Description: development files for the KDE Development Platform PIM libraries
 Package: kdepimlibs-kio-plugins
 Architecture: any
 Depends: libsasl2-modules, ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data
-Breaks: kdepimlibs-data
+Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
 Description: kio slaves used by KDE PIM applications
  This package contains the imap4, ldap, mbox, nntp, pop3, sieve and smtp kio
  slaves.
@@ -65,6 +70,8 @@ Description: kio slaves used by KDE PIM applications
 Package: libakonadi-contact4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepim-runtime (<< 4:4.4.0)
+Breaks: kdepim-runtime (<< 4:4.4.0)
 Description: Akonadi contacts access library
  This library provides contacts manipulation helpers using the
  Akonadi PIM data server.
@@ -74,6 +81,8 @@ Description: Akonadi contacts access library
 Package: libakonadi-kabc4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: akonadi-kde (<< 4:4.1.80), kdepimlibs5 (<< 4:4.4.0)
+Breaks: akonadi-kde (<< 4:4.1.80), kdepimlibs5 (<< 4:4.4.0)
 Description: Akonadi address book access library
  This library provides address book manipulation helpers using the
  Akonadi PIM data server.
@@ -83,6 +92,8 @@ Description: Akonadi address book access library
 Package: libakonadi-kcal4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: akonadi-kde (<< 4:4.1.80), kdepim-runtime (<< 4:4.4.0)
+Breaks: akonadi-kde (<< 4:4.1.80), kdepim-runtime (<< 4:4.4.0)
 Description: Akonadi calendar access library
  This library provides calendar manipulation helpers using the
  Akonadi PIM data server.
@@ -92,8 +103,8 @@ Description: Akonadi calendar access library
 Package: libakonadi-kde4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data
-Breaks: kdepimlibs-data
+Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
 Description: library for using the Akonadi PIM data server
  This is the client access library for using the Akonadi PIM data server.
  .
@@ -102,8 +113,8 @@ Description: library for using the Akonadi PIM data server
 Package: libakonadi-kmime4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data
-Breaks: kdepimlibs-data
+Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
 Description: Akonadi MIME handling library
  This library provides MIME handling helpers using the
  Akonadi PIM data server.
@@ -130,6 +141,8 @@ Description: Akonadi notes access library
 Package: libakonadi-xml4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepim-runtime (<< 4:4.12.0)
+Breaks: kdepim-runtime (<< 4:4.12.0)
 Description: Akonadi XML helper library
  This library provides XML helpers using the Akonadi PIM data server.
  .
@@ -138,6 +151,8 @@ Description: Akonadi XML helper library
 Package: libgpgme++2
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: c++ wrapper library for gpgme
  GpgME++ is a C++ wrapper (or C++ bindings) for the GnuPG project's gpgme
  (GnuPG Made Easy) library.
@@ -147,8 +162,8 @@ Description: c++ wrapper library for gpgme
 Package: libkabc4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data
-Breaks: kdepimlibs-data
+Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
 Description: library for handling address book data
  This library provides an API for address book data. It includes features
  such as:
@@ -170,6 +185,8 @@ Description: library for handling address book data
 Package: libkblog4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: client-side support library for web application remote blogging APIs
  KBlog is a library for calling functions on Blogger 1.0, MetaWeblog,
  MovableType and GData compatible blogs. It calls the APIs using KXmlRpcClient
@@ -191,8 +208,8 @@ Description: library for handling kalarm calendar data
 Package: libkcal4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data
-Breaks: kdepimlibs-data
+Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
 Description: library for handling calendar data
  This library provides access to and handling of calendar data. It supports
  the standard formats iCalendar and vCalendar and the group scheduling
@@ -225,8 +242,8 @@ Description: library with utility functions for the handling of calendar data
 Package: libkholidays4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data
-Breaks: kdepimlibs-data
+Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
 Description: holidays calculation library
  This library provides a C++ API that determines holiday and other special
  events for a geographical region.
@@ -236,6 +253,8 @@ Description: holidays calculation library
 Package: libkimap4
 Architecture: any
 Depends: libsasl2-modules, ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for handling IMAP data
  This library provides an API for handling data received from IMAP services.
  IMAP (Internet Message Access Protocol) is one of the two most prevalent
@@ -246,6 +265,8 @@ Description: library for handling IMAP data
 Package: libkldap4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for accessing LDAP
  This is a library for accessing LDAP with a convenient Qt style C++ API.
  LDAP (Lightweight Directory Access Protocol) is an application protocol
@@ -274,6 +295,8 @@ Description: library providing calendar helpers for Akonadi items
 Package: libkmime4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for handling MIME data
  This library provides an API for handling MIME data. MIME (Multipurpose
  Internet Mail Extensions) is an Internet Standard that extends the format
@@ -283,11 +306,11 @@ Description: library for handling MIME data
  .
  This package is part of the KDE Development Platform PIM libraries module.
 
-Package: libkontactinterface4a
+Package: libkontactinterface4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: libkontactinterface4
-Breaks: libkontactinterface4
+Replaces: kontact (<< 4:4.1.80), libkontactinterfaces4
+Breaks: kontact (<< 4:4.1.80), libkontactinterfaces4
 Description: Kontact interface library
  This library provides the glue necessary for application "Parts" to be
  embedded as a Kontact component (or plugin).
@@ -297,7 +320,12 @@ Description: Kontact interface library
 Package: libkpimidentities4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: klinkstatus (<< 4:4.5)
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepim-runtime (<< 4:4.5),
+        kdepimlibs5 (<< 4:4.4.0),
+        klinkstatus (<< 4:4.5),
+        libkalarmcal2 (<< 4:4.9),
+        libkdepim4 (<< 4:4.5)
 Description: library for managing user identities
  This library provides an API for managing user identities.
  .
@@ -306,6 +334,8 @@ Description: library for managing user identities
 Package: libkpimtextedit4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library that provides a textedit with PIM-specific features
  KPIMTextedit provides a textedit with PIM-specific features. It also provides
  so-called rich text builders which can convert the formatted text in the text
@@ -316,6 +346,8 @@ Description: library that provides a textedit with PIM-specific features
 Package: libkpimutils4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for dealing with email addresses
  This library contains utility functions for dealing with email addresses.
  This includes parsing, splitting and munging email addresses represented
@@ -327,8 +359,8 @@ Description: library for dealing with email addresses
 Package: libkresources4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data
-Breaks: kdepimlibs-data
+Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
 Description: KDE Resource framework library
  This library provides a framework for managing resources of different types,
  organized in families. The Resource framework is for example used for
@@ -339,6 +371,8 @@ Description: KDE Resource framework library
 Package: libktnef4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for handling TNEF data
  Ktnef is a library for handling data in the TNEF format (Transport Neutral
  Encapsulation Format, a proprietary format of e-mail attachment used by
@@ -351,6 +385,8 @@ Description: library for handling TNEF data
 Package: libkxmlrpcclient4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: simple XML-RPC client library
  This library contains simple XML-RPC client support. It is used mainly by the
  egroupware module of kdepim, but is a complete client and is quite easy to use.
@@ -360,8 +396,8 @@ Description: simple XML-RPC client library
 Package: libmailtransport4
 Architecture: any
 Depends: ${misc:Depends}, ${perl:Depends}, ${shlibs:Depends}
-Replaces: kdepimlibs-data
-Breaks: kdepimlibs-data
+Replaces: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs-data, kdepimlibs5 (<< 4:4.4.0)
 Description: mail transport service library
  Mailtransport is a library that provides the following functionality:
  .
@@ -377,6 +413,8 @@ Description: mail transport service library
 Package: libmicroblog4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for using the Microblog Akonadi Resource
  Microblog is a library that provides some helper functions for using
  the Microblog Akonadi Resource.
@@ -386,6 +424,8 @@ Description: library for using the Microblog Akonadi Resource
 Package: libqgpgme1
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: library for GpgME++ integration with Qt
  QGpgME is a library that provides GpgME++ integration with QEventLoop
  and some Qt datatypes (e.g. QByteArray).
@@ -395,6 +435,8 @@ Description: library for GpgME++ integration with Qt
 Package: libsyndication4
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: kdepimlibs5 (<< 4:4.4.0)
+Breaks: kdepimlibs5 (<< 4:4.4.0)
 Description: parser library for RSS and Atom feeds
  Syndication is a parser library for RSS and Atom feeds. It offers a unified,
  format-agnostic view on the parsed feed, so that the using application does
