--- a/debian/control
+++ b/debian/control
@@ -44,11 +44,9 @@ Depends: ${allLibraries},
          ${misc:Depends},
          ${sameVersionDep:kdelibs5-dev:libakonadi-kde4},
          ${shlibs:Depends}
-Replaces: kdepim-runtime (<< 4:4.13),
-          kdepimlibs-data (<< 4:4.1.80),
+Replaces: kdepimlibs-data (<< 4:4.1.80),
           libkleopatra1-dev
-Breaks: kdepim-runtime (<< 4:4.13),
-        kdepimlibs-data (<< 4:4.1.80),
+Breaks: kdepimlibs-data (<< 4:4.1.80),
         libkleopatra1-dev
 Description: development files for the KDE Development Platform PIM libraries
  This package contains development files for building software that uses
